syntax = "proto3";

package processing;

service Processing {
    rpc Request(TreediagramRequest) returns (TreediagramReply) {}
}

message User {
    string id = 1;
    string name = 2;
}

message TreediagramRequest {
    string source = 1;
    string correlationId = 2;
    User bot = 3;
    User author = 4;
    string channelId = 5;
    string serverId = 6;
    repeated User mentions = 7;
    string content = 8;
}

message TreediagramReply {
    string id = 1;
}
